add percentage option. to nearest 5%

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <label for="mult">*</label>
     <input type="radio" id="div" name="op" value="/">
     <label for="mult">/</label>
+    <input type="radio" id="percentage" name="op" value="%">
+    <label for="mult">%</label>
     <br />
     Max Operand:
     <input type="text" id="max" size="8">
