display all time answered

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     Time for most recent answer: <span id="rtime"></span>s.
     <br />
     You've answered <span id="count">0</span>
+    All time: <span id="alltimecount">--</span>
     
     <p>
     <br />
